--- a/src/components/module/table/actions/ModuleTableActionButtonRadioGroup.scss
+++ b/src/components/module/table/actions/ModuleTableActionButtonRadioGroup.scss
@@ -21,6 +21,7 @@
 
         .button-icon-left {
             float: none;
+            width: auto;
             margin: 0;
             color: $theme-primary;
             font-size: 20px;
