--- a/src/containers/app/modules/editPatient/analgesia/AnalgesiaData.scss
+++ b/src/containers/app/modules/editPatient/analgesia/AnalgesiaData.scss
@@ -4,6 +4,7 @@
 @import 'scss/common.scss';
 
 .analgesia-data {
+    margin-top: -32px;
 
     .append-time-point-button {
         display: block;
