--- a/src/containers/app/nav/patients/NavPatientListItem.scss
+++ b/src/containers/app/nav/patients/NavPatientListItem.scss
@@ -10,7 +10,7 @@
     text-align: left;
     transition: opacity $theme-transition-duration ease-in-out;
 
-    .patient-info {
+    .nav-patient-list-patient-info {
         height: 24px;
         font-size: 16px;
     }
