--- a/src/assets/scss/customized/MaterialDropdownSelect.scss
+++ b/src/assets/scss/customized/MaterialDropdownSelect.scss
@@ -1,7 +1,8 @@
 /**
  * @file MaterialDropdownSelect.scss
  */
-@import '../common.scss';
+
+@import 'scss/common.scss';
 
 .material-dropdown-select {
     background: transparent !important;
