--- a/src/assets/scss/customized/MaterialTextField.scss
+++ b/src/assets/scss/customized/MaterialTextField.scss
@@ -1,7 +1,8 @@
 /**
  * @file MaterialTextField.scss
  */
-@import '../common.scss';
+
+@import 'scss/common.scss';
 
 .material-text-field {
     background: transparent !important;
