--- a/src/assets/scss/customized/BaseButton.scss
+++ b/src/assets/scss/customized/BaseButton.scss
@@ -1,7 +1,8 @@
 /**
  * @file BaseButton.scss
  */
-@import '../common.scss';
+
+@import 'scss/common.scss';
 
 .base-button {
     font-size: inherit !important;
