--- a/src/assets/scss/customized/DropdownSelect.scss
+++ b/src/assets/scss/customized/DropdownSelect.scss
@@ -1,7 +1,8 @@
 /**
  * @file DropdownSelect.scss
  */
-@import '../common.scss';
+
+@import 'scss/common.scss';
 
 .dropdown-select-popup {
     border: 1px solid $theme-border !important;
