--- a/src/assets/scss/customized/MaterialProvider.scss
+++ b/src/assets/scss/customized/MaterialProvider.scss
@@ -1,7 +1,8 @@
 /**
  * @file MaterialProvider.scss
  */
-@import '../common.scss';
+
+@import 'scss/common.scss';
 
 .material-provider {
     background: transparent !important;
