--- a/src/assets/scss/customized/Paper.scss
+++ b/src/assets/scss/customized/Paper.scss
@@ -1,7 +1,8 @@
 /**
  * @file Paper.scss
  */
-@import '../common.scss';
+
+@import 'scss/common.scss';
 
 .paper {
     box-shadow: rgba(0, 0, 0, .16) 0 2px 4px !important;
