--- a/src/assets/scss/customized/RaisedButton.scss
+++ b/src/assets/scss/customized/RaisedButton.scss
@@ -1,7 +1,8 @@
 /**
  * @file RaisedButton.scss
  */
-@import '../common.scss';
+
+@import 'scss/common.scss';
 
 .base-button.raised-button {
     box-shadow: 0 0 16px rgba(0, 0, 0, 0.06);
