--- a/src/assets/scss/customized/Toast.scss
+++ b/src/assets/scss/customized/Toast.scss
@@ -1,7 +1,8 @@
 /**
  * @file Toast.scss
  */
-@import '../common.scss';
+
+@import 'scss/common.scss';
 
 .portal {
 
@@ -31,6 +32,7 @@
                 &.success {
                     color: $theme-success;
                 }
+
                 &.error {
                     color: $theme-error;
                 }
