--- a/src/assets/scss/customized/MaterialDropdownSelect.scss
+++ b/src/assets/scss/customized/MaterialDropdownSelect.scss
@@ -4,7 +4,7 @@
 
 @import 'scss/common.scss';
 
-.material-dropdown-select {
+.material-provider.material-dropdown-select {
     background: transparent !important;
 
     .material-provider-label {
