--- a/src/assets/scss/customized/MaterialTimePicker.scss
+++ b/src/assets/scss/customized/MaterialTimePicker.scss
@@ -5,9 +5,18 @@
 @import 'scss/common.scss';
 
 .material-time-picker {
+    height: 64px;
 
-    .material-provider-label {
-        color: $theme-label !important;
+    .material-provider {
+
+        .material-provider-label {
+            color: $theme-label !important;
+        }
+
+        .text-field-input,
+        .text-field-placeholder {
+            font-size: 14px !important;
+        }
     }
 
     &.focused {
