--- a/src/assets/scss/customized/MaterialTimePicker.scss
+++ b/src/assets/scss/customized/MaterialTimePicker.scss
@@ -25,3 +25,19 @@
         }
     }
 }
+
+.portal .popup.material-time-picker-popup {
+    width: 200px;
+
+    .calendar {
+        width: 100%;
+
+        .time-items {
+            width: 50% !important;
+
+            &.seconds {
+                display: none;
+            }
+        }
+    }
+}
