--- a/src/containers/app/modules/editPatient/observal/ObservalForm.scss
+++ b/src/containers/app/modules/editPatient/observal/ObservalForm.scss
@@ -8,7 +8,7 @@
     .material-text-field,
     .material-dropdown-select,
     .material-provider,
-    .material-date-time-picker {
+    .material-time-picker {
         margin-bottom: 48px;
     }
 
