--- a/src/components/module/loading/ModuleLoading.scss
+++ b/src/components/module/loading/ModuleLoading.scss
@@ -1,7 +1,8 @@
 /**
  * @file ModuleLoading.scss
  */
-@import '../../../assets/scss/common';
+
+@import 'scss/common';
 
 .module-loading {
     display: block;
