--- a/src/assets/scss/customized/Table.scss
+++ b/src/assets/scss/customized/Table.scss
@@ -179,9 +179,9 @@
                         }
 
                         &.measure-td {
-                            height: 0px !important;
-                            padding: 0px !important;
-                            border: 0px !important;
+                            height: 0 !important;
+                            padding: 0 !important;
+                            border: 0 !important;
                         }
                     }
 
