--- a/src/modules/Root/containers/Root.scss
+++ b/src/modules/Root/containers/Root.scss
@@ -2,7 +2,7 @@
  * @file Root.scss
  */
 
-@import 'scss/common.scss';
+@import '../../../assets/scss/common';
 
 .root {
     min-width: $minWidth;
