--- a/src/modules/PatientList/containers/PatientList.scss
+++ b/src/modules/PatientList/containers/PatientList.scss
@@ -2,7 +2,7 @@
  * @file PatientList.scss
  */
 
-@import 'scss/common.scss';
+@import '../../../assets/scss/common';
 
 .patient-list {
     display: flex;
