--- a/src/modules/PatientList/containers/PatientListFilter.scss
+++ b/src/modules/PatientList/containers/PatientListFilter.scss
@@ -2,7 +2,7 @@
  * @file PatientListFilter.scss
  */
 
-@import 'scss/common.scss';
+@import '../../../assets/scss/common';
 
 .patient-list-filter {
     display: flex;
