--- a/src/modules/PatientList/containers/PatientListTable.scss
+++ b/src/modules/PatientList/containers/PatientListTable.scss
@@ -2,7 +2,7 @@
  * @file PatientListTable.scss
  */
 
-@import 'scss/common.scss';
+@import '../../../assets/scss/common';
 
 .patient-list-table-card {
     flex: 1;
