--- a/src/modules/PatientEditor/containers/analgesia/AnalgesiaAppendTimePointButton.scss
+++ b/src/modules/PatientEditor/containers/analgesia/AnalgesiaAppendTimePointButton.scss
@@ -2,7 +2,7 @@
  * @file AnalgesiaAppendTimePointButton.scss
  */
 
-@import 'scss/common.scss';
+@import '../../../../assets/scss/common';
 
 .analgesia-append-time-point-button {
     display: block;
