--- a/src/modules/PatientEditor/containers/patientBaseInfo/AddPatientDialog.scss
+++ b/src/modules/PatientEditor/containers/patientBaseInfo/AddPatientDialog.scss
@@ -2,7 +2,7 @@
  * @file AddPatientDialog.scss
  */
 
-@import 'scss/common.scss';
+@import '../../../../assets/scss/common';
 
 .paper.dialog.add-patient-dialog {
     width: 720px;
