--- a/src/modules/PatientEditor/containers/analgesia/AnalgesiaData.scss
+++ b/src/modules/PatientEditor/containers/analgesia/AnalgesiaData.scss
@@ -2,7 +2,7 @@
  * @file AnalgesiaData.scss
  */
 
-@import 'scss/common.scss';
+@import '../../../../assets/scss/common';
 
 .analgesia-data {
     margin-top: -32px;
