--- a/src/modules/PatientEditor/containers/patientInfo/PatientInfo.scss
+++ b/src/modules/PatientEditor/containers/patientInfo/PatientInfo.scss
@@ -2,7 +2,7 @@
  * @file PatientInfo.scss
  */
 
-@import 'scss/common.scss';
+@import '../../../../assets/scss/common';
 
 .patient-info {
     margin-top: 64px;
