--- a/src/modules/PatientEditor/containers/analgesia/AnalgesiaTable.scss
+++ b/src/modules/PatientEditor/containers/analgesia/AnalgesiaTable.scss
@@ -2,7 +2,7 @@
  * @file AnalgesiaTable.scss
  */
 
-@import '../../../../assets/scss/common';
+@import 'scss/common.scss';
 
 .analgesia-data-table-card {
 
