--- a/src/modules/PatientEditor/containers/observal/ObservalForm.scss
+++ b/src/modules/PatientEditor/containers/observal/ObservalForm.scss
@@ -2,7 +2,7 @@
  * @file ObservalForm.scss
  */
 
-@import '../../../../assets/scss/common';
+@import 'scss/common.scss';
 
 .observal-data-form {
 
