--- a/src/customized/BaseButton.scss
+++ b/src/customized/BaseButton.scss
@@ -2,7 +2,7 @@
  * @file BaseButton.scss
  */
 
-@import 'scss/common.scss';
+@import '../assets/scss/common';
 
 .base-button {
     font-size: inherit !important;
