--- a/src/customized/MaterialDropdownSelect.scss
+++ b/src/customized/MaterialDropdownSelect.scss
@@ -2,7 +2,7 @@
  * @file MaterialDropdownSelect.scss
  */
 
-@import 'scss/common.scss';
+@import '../assets/scss/common';
 
 .material-provider.material-dropdown-select {
     background: transparent !important;
