--- a/src/customized/MaterialTextField.scss
+++ b/src/customized/MaterialTextField.scss
@@ -2,7 +2,7 @@
  * @file MaterialTextField.scss
  */
 
-@import 'scss/common.scss';
+@import '../assets/scss/common';
 
 .material-text-field {
     background: transparent !important;
