--- a/src/customized/Paper.scss
+++ b/src/customized/Paper.scss
@@ -2,7 +2,7 @@
  * @file Paper.scss
  */
 
-@import 'scss/common.scss';
+@import '../assets/scss/common';
 
 .paper {
     box-shadow: rgba(0, 0, 0, .16) 0 2px 4px !important;
