--- a/src/customized/DropdownSelect.scss
+++ b/src/customized/DropdownSelect.scss
@@ -2,7 +2,7 @@
  * @file DropdownSelect.scss
  */
 
-@import 'scss/common.scss';
+@import '../assets/scss/common';
 
 .dropdown-select-popup {
     border: 1px solid $theme-border !important;
