--- a/src/customized/MaterialProvider.scss
+++ b/src/customized/MaterialProvider.scss
@@ -2,7 +2,7 @@
  * @file MaterialProvider.scss
  */
 
-@import 'scss/common.scss';
+@import '../assets/scss/common';
 
 .material-provider {
     background: transparent !important;
