--- a/src/customized/MaterialTimePicker.scss
+++ b/src/customized/MaterialTimePicker.scss
@@ -1,10 +1,10 @@
 /**
- * @file MaterialDateTimePicker.scss
+ * @file MaterialTimePicker.scss
  */
 
-@import 'scss/common.scss';
+@import '../assets/scss/common';
 
-.material-date-time-picker {
+.material-time-picker {
     height: 64px;
 
     .material-provider {
@@ -22,6 +22,22 @@
     &.focused {
         .material-provider-label {
             color: $theme-highlight !important;
+        }
+    }
+}
+
+.portal .popup.material-time-picker-popup {
+    width: 200px;
+
+    .calendar {
+        width: 100%;
+
+        .time-items {
+            width: 50% !important;
+
+            &.seconds {
+                display: none;
+            }
         }
     }
 }
